@@ -8,6 +8,9 @@ To do:
 	Remove menu bar
 	Remove right view (option)
 
+	Action box
+	Transfers resumable.
+
 - 09/06/2005, version 0.01 (0.0.1, 0.0.1, 0.0.1): roms
 	Use new TiLP-II framework (libti*2)
 
